// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`block calculation can calculate some blocks 1 1`] = `
BlockSet {
  "blocks": [
    {
      "key": "test:ctgA:0:800:0-beforeFirstRegion",
      "offsetPx": -800,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:0:800:0",
      "offsetPx": 0,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:800:1600:0",
      "offsetPx": 800,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 800,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 2 1`] = `
BlockSet {
  "blocks": [
    {
      "key": "test:ctgA:0:100:0-beforeFirstRegion",
      "offsetPx": -800,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 100,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgA:0:100:0",
      "offsetPx": 0,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    {
      "key": "test:ctgA:0:100:0-rightpad",
      "offsetPx": 100,
      "type": "InterRegionPaddingBlock",
      "widthPx": 2,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgB:100:200:1",
      "offsetPx": 102,
      "refName": "ctgB",
      "reversed": undefined,
      "start": 100,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    {
      "key": "test:ctgB:100:200:1-afterLastRegion",
      "offsetPx": 202,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 5 1`] = `
BlockSet {
  "blocks": [
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 5600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:4800:5600:0",
      "offsetPx": 4800,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 4800,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 6400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:5600:6400:0",
      "offsetPx": 5600,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 5600,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 6 1`] = `
BlockSet {
  "blocks": [
    {
      "key": "test:ctgA:0:200:0-beforeFirstRegion",
      "offsetPx": -800,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgA:0:200:0",
      "offsetPx": 0,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 200,
    },
    {
      "key": "test:ctgA:0:200:0-rightpad",
      "offsetPx": 200,
      "type": "InterRegionPaddingBlock",
      "widthPx": 2,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgB:0:800:1",
      "offsetPx": 202,
      "refName": "ctgB",
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 7 1`] = `
BlockSet {
  "blocks": [
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgB:0:800:1",
      "offsetPx": 202,
      "refName": "ctgB",
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 1000,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgB:800:1000:1",
      "offsetPx": 1002,
      "refName": "ctgB",
      "reversed": undefined,
      "start": 800,
      "type": "ContentBlock",
      "widthPx": 200,
    },
    {
      "key": "test:ctgB:800:1000:1-afterLastRegion",
      "offsetPx": 1202,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 8 1`] = `
BlockSet {
  "blocks": [
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgB:800:1600:1",
      "offsetPx": 1002,
      "refName": "ctgB",
      "reversed": undefined,
      "start": 800,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 2400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgB:1600:2400:1",
      "offsetPx": 1802,
      "refName": "ctgB",
      "reversed": undefined,
      "start": 1600,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 9 1`] = `
BlockSet {
  "blocks": [
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 3200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:1600:3200:0",
      "offsetPx": 800,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 1600,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 4800,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:3200:4800:0",
      "offsetPx": 1600,
      "refName": "ctgA",
      "reversed": undefined,
      "start": 3200,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 10 1`] = `
[
  {
    "key": "test:ctgA:100:140:0-beforeFirstRegion",
    "offsetPx": -800,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": 800,
  },
  {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 140,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:100:140:0",
    "offsetPx": 0,
    "refName": "ctgA",
    "reversed": undefined,
    "start": 100,
    "type": "ContentBlock",
    "widthPx": 800,
  },
  {
    "assemblyName": "test",
    "displayedRegionIndex": 0,
    "end": 180,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "test:ctgA:140:180:0",
    "offsetPx": 800,
    "refName": "ctgA",
    "reversed": undefined,
    "start": 140,
    "type": "ContentBlock",
    "widthPx": 800,
  },
]
`;

exports[`reverse block calculation 1 1`] = `
BlockSet {
  "blocks": [
    {
      "key": "test:ctgA:9200:10000:0:rev-beforeFirstRegion",
      "offsetPx": -800,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:9200:10000:0:rev",
      "offsetPx": 0,
      "refName": "ctgA",
      "reversed": true,
      "start": 9200,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:8400:9200:0:rev",
      "offsetPx": 800,
      "refName": "ctgA",
      "reversed": true,
      "start": 8400,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions with elided region 1`] = `
BlockSet {
  "blocks": [
    {
      "key": "test:ctgA:0:1:0:rev-beforeFirstRegion",
      "offsetPx": -800,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "elidedBlockCount": 0,
      "end": 1,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgA:0:1:0:rev",
      "offsetPx": 0,
      "refName": "ctgA",
      "reversed": true,
      "start": 0,
      "type": "ElidedBlock",
      "widthPx": 1,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "test:ctgA:9200:10000:1:rev",
      "offsetPx": 1,
      "refName": "ctgA",
      "reversed": true,
      "start": 9200,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions without elided region 1`] = `
BlockSet {
  "blocks": [
    {
      "key": "test:ctgA:100:200:0:rev-beforeFirstRegion",
      "offsetPx": -800,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 0,
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgA:100:200:0:rev",
      "offsetPx": 0,
      "refName": "ctgA",
      "reversed": true,
      "start": 100,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    {
      "key": "test:ctgA:100:200:0:rev-rightpad",
      "offsetPx": 100,
      "type": "InterRegionPaddingBlock",
      "widthPx": 2,
    },
    {
      "assemblyName": "test",
      "displayedRegionIndex": 1,
      "end": 600,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "test:ctgA:500:600:1:rev",
      "offsetPx": 102,
      "refName": "ctgA",
      "reversed": true,
      "start": 500,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    {
      "key": "test:ctgA:500:600:1:rev-afterLastRegion",
      "offsetPx": 202,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
  ],
}
`;
